[tool.poetry]
name = "emdummy"
version = "1.0.2"
description = "A template module for xtsv"
authors = ["dlazesz"]
license = "LGPLv3"

[tool.poetry.dependencies]
python = "^3.6"
xtsv = "^1"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
