[tool.poetry]
name = "emdummy"
version = "1.0.2"
description = "A template module for xtsv"
readme = "README.md"
repository = "https://github.com/nytud/emdummy"
authors = ["dlazesz"]
license = "LGPLv3"
# License and required Python version is automatically added
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Operating System :: POSIX :: Linux'
]

[tool.poetry.scripts]
emdummy = 'emdummy.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
xtsv = "^1"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
