[tool.poetry]
name = "emdummy"
version = "1.0.2"
description = "A template module for xtsv"
readme = "README.md"
repository = "https://github.com/nytud/emdummy"
authors = ["dlazesz"]
license = "LGPLv3"
# License and required Python version is automatically added
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
# Data files from MAKEFILE.in
# include = []

[tool.poetry.scripts]
emdummy = 'emdummy.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
xtsv = "^1.3.0"
# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps. e.g. pip install emdummy[extra_name]
# extra_package_name = { version = "^1.2.3", optional = true }

# [tool.poetry.extras]
# extra_name = ["extra_package_name"]
# full = ["extra_name"]

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
